# ipqc

./: .gitignore  README.md
.devcontainer/: devcontainer.json
docs/: CNAME  index.html
qc/: README.md  qc_report.py
qc/webapp/: .env  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt
qc/webapp/.streamlit/: config.toml
qc/webapp/modules/: charts.py  database.py  iedb.py  motif_decon.py  prediction.py  report.py  ui_utils.py
qc/webapp/modules/predictors/: base.py  bigmhc_predictor.py  mhcflurry_predictor.py  netmhcpan_predictor.py  registry.py  transhla_predictor.py  unipmt_predictor.py
qc/webapp/pages/: 2_About.py  3_Glossary.py  4_My_Runs.py  5_Compare_Runs.py  6_IEDB_Prediction.py  6_MHC_Prediction.py  7_Diagnostics.py  8_HLA_Typing.py  analysis.py
webapp/: CHANGELOG.md  README.md  app.py  env.example
webapp/modules/: auth.py  database.py  hla_typing.py  mapping.py  metrics.py  parsing.py  prediction.py  storage.py  ui_utils.py
webapp/modules/predictors/: __init__.py  base.py  mhcflurry_predictor.py  netmhcpan_predictor.py  netmhcstabpan_predictor.py  registry.py
webapp/pages/: 2_About.py  4_My_Runs.py  6_MHC_Prediction.py  7_MHC_Stability.py  9_Diagnostics.py  analysis.py
