[project]
name = "immunopeptidomics-qc-webapp"
version = "0.1.0"
description = "Interactive Streamlit webapp for immunopeptidomics QC reporting from FragPipe output"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "pandas>=2.0",
    "numpy>=1.26",
    "plotly>=5.22",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "logomaker>=0.8",
    "bcrypt>=4.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
# MHC-I prediction backends — install whichever tools you have access to.
# After installing mhcflurry, run: mhcflurry-downloads fetch
mhcflurry = ["mhcflurry>=2.0"]
bigmhc    = ["bigmhc"]
transhla  = ["TransHLA"]
# NetMHCpan must be installed manually from DTU:
#   https://services.healthtech.dtu.dk/services/NetMHCpan-4.1/
# UniPMT must be installed from GitHub:
#   git clone https://github.com/IEDB-group/UniPMT && pip install -e UniPMT

[project.scripts]
qc-webapp = "app:main"

[tool.uv]
dev-dependencies = []
