[project]
name = "immunopeptidomics-qc-webapp"
version = "0.1.0"
description = "Interactive Streamlit webapp for immunopeptidomics QC reporting from FragPipe output"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "pandas>=2.0",
    "numpy>=1.26",
    "plotly>=5.22",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "logomaker>=0.8",
    "bcrypt>=4.0",
    "pyarrow>=14.0",
    "mhcflurry>=2.2.1",
]

[project.optional-dependencies]
# MHCflurry is the only predictor available on PyPI.
# After adding it, download model weights: mhcflurry-downloads fetch (~500 MB)
mhcflurry = ["mhcflurry>=2.0"]

# NetMHCpan must be installed manually (academic license required):
#   https://services.healthtech.dtu.dk/services/NetMHCpan-4.1/
#   Then add the install directory to PATH.

[tool.setuptools.packages.find]
# Only package the modules/ directory; exclude pages/ and data/ which are not
# importable Python packages — they are Streamlit page scripts and runtime data.
include = ["modules", "modules.*"]

[dependency-groups]
dev = []
